# AMON-SENSS

./: .amon.c.swp  INSTALL  Makefile  Makefile.am  Makefile.in  README  a.out  amon  amon-flow.cc  amon-red.cc  amon.c  amon.config  as.cc  as.config  as4.cc  as8.cc  asc  bm_structs.h  config.h.in  configure  configure.ac  detect.cc  digest_alerts.py  file-list  localprefs.txt  nominal_profile.txt  output  packetscore_testing.cc  packetscore_training.cc  profile.cc  read.cc  run-all-files.sh  utils.cc  utils.h
Packetscore/: as16.cc
Packetscore/flow_count_based/: as11.cc  training.cc
autom4te.cache/: output.0  requests  traces.0  traces.1
chargen/: alerts.txt
ddos_dns_ampl/: alerts.txt
ntp_ddos/: alerts.txt
radb/: alerts.txt
release/: Makefile  Makefile.am  Makefile.in  alerts.txt  amon.cc  amon.config  config.h  config.status  configure  configure.ac  configure.scan  utils.cc  utils.h
release/.deps/: amon.Po  utils.Po
release/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
ssdp/: alerts.txt  amon.out
